fix answers visibility bug

--- a/src/index.css
+++ b/src/index.css
@@ -185,7 +185,7 @@
 /*************quiz-page*****************/
 
 .quiz-page {
-  padding: 5em 0.6em;
+  padding: 4em 0.6em;
   font-family: "Karla";
 }
 
@@ -201,8 +201,7 @@
 }
 
 .answer-container {
-  margin: 0.6em 0.6em 0;
-  margin-bottom: 0.8em;
+  margin: 0.6em 0.6em;
   display: flex;
   text-align: center;
   align-items: center;
@@ -216,7 +215,7 @@
   font-family: "Inter";
   font-weight: 500;
   font-size: 0.7em;
-  line-height: 0.6em;
+  line-height: 1em;
   color: var(--mainBlue);
   cursor: pointer;
 }
